--- a/y/ya/yam/yamaha-motor.com.html
+++ b/y/ya/yam/yamaha-motor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yamaha-motor.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228173946id_/http%3A//www.yamaha-motor.com/gen_privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yamaha-motor.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005841id_/http%3A//yamaha-motor.com/gen_privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>America's Most Diverse - Yamaha Motor Corporation, USA, Privacy Policy</title>
@@ -358,6 +358,7 @@ hbx.ctdef="full";//DEFAULT CONTENT CATEGORY
 //ACTION SETTINGS
 hbx.fv="5";//FORM VALIDATION MINIMUM ELEMENTS OR SUBMIT FUNCTION NAME
 hbx.lt="auto";//LINK TRACKING
+hbx.lidt="hbx_lid";
 hbx.dlf="n";//DOWNLOAD FILTER
 hbx.dft="n";//DOWNLOAD FILE NAMING
 hbx.elf="n";//EXIT LINK FILTER
