--- a/w/wo/wor/worldlingo.com.html
+++ b/w/wo/wor/worldlingo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the worldlingo.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231001858id_/http%3A//worldlingo.com/en/company/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the worldlingo.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615005852id_/http%3A//worldlingo.com/en/company/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <title>WorldLingo Privacy Policy</title>
@@ -99,7 +99,13 @@
   <a title="Accessibility Statement" href="/en/company/accessibility.html">Accessibility Statement</a> | 
   <a title="Link to WorldLingo" href="/en/company/links.html">Link to WorldLingo</a> 
 </p>
-<p id="copyright">© Copyright 2005 WorldLingo Translations LLC. All rights reserved.</p>
+<p id="copyright">© Copyright 2006 WorldLingo Translations LLC. All rights reserved.</p>
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-309475-1";
+urchinTracker();
+</script>
 </div>
 
 
