--- a/u/un/une/une.edu.au.html
+++ b/u/un/une/une.edu.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the une.edu.au privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228133403id_/http%3A//une.edu.au/rmo/policies/privacystatement.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the une.edu.au privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615010438id_/http%3A//www.une.edu.au/rmo/policies/privacystatement.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>UNE Privacy Statement</title>
