--- a/n/na/nat/nature.com.html
+++ b/n/na/nat/nature.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nature.com privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210181502id_/http%3A//npg.nature.com/npg/servlet/Content%3Fdata%3Dxml/08_privacy.xml%26style%3Dxml/08_privacy.xsl) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nature.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615010536id_/http%3A//npg.nature.com/npg/servlet/Content%3Fdata%3Dxml/08_privacy.xml%26style%3Dxml/08_privacy.xsl) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -74,7 +74,7 @@
 <tbody><tr align="center">
 <td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td height="24"><a title="about npg" class="sitenav" href="Content?data=xml/02_welcome.xml&amp;style=xml/02_welcome.xsl"><b>about npg</b></a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="for authors" class="sitenav" href="Content?data=xml/05_home.xml&amp;style=xml/05_home.xsl">for authors </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="advertising" class="sitenav" href="http://advertising.nature.com">advertising </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="publications &amp; services" class="sitenav" href="/npg/forms/04_cat.jsp">publications<br>&amp; services <br>
 </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="society publishing" class="sitenav" href="Content?data=xml/11_socpub-intro.xml&amp;style=xml/11_socpub.xsl">society<br>publishing<br>
-</a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="work@npg" class="sitenav" href="Content?data=xml/03_welcome.xml&amp;style=xml/03_jobs.xsl">work@npg </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td bgcolor="#CC3300"><a title="subscriptions &amp; access" class="white" href="Content?data=xml/08_intro.xml&amp;style=xml/08_intro.xsl">subscriptions<br>&amp; access <br>
+</a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="work@npg" class="sitenav" href="Content?data=xml/03_welcome.xml&amp;style=xml/03_jobs.xsl">work@npg </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td bgcolor="#CC3300"><a title="subscriptions &amp; access" class="white" href="Content?data=xml/08_home.xml&amp;style=xml/08_home.xsl">subscriptions<br>&amp; access <br>
 </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="librarian gateway" class="sitenav" href="Content?data=xml/07_home.xml&amp;style=xml/07_home.xsl">librarian<br>gateway</a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="partnerships" class="sitenav" href="Content?data=xml/10_sponsor.xml&amp;style=xml/10_sponsor.xsl">partnerships </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td><td><a title="contact us" class="sitenav" href="Content?data=xml/01_home.xml&amp;style=xml/01_home.xsl">contact us </a></td><td width="1"><img height="24" width="1" src="../images/dotvertic1x24.gif"></td>
 </tr>
 </tbody></table>
@@ -92,7 +92,7 @@
 <table border="0" width="100%" cellpadding="0" cellspacing="0">
 <tbody>
 <tr>
-<td width="50%" class="whtext"><img width="16" src="../images/spacer.gif" height="1"></td><td width="50%" align="right" class="whtext"><script language="javascript">document.write("<B>" + Date() + "</B>")</script><b>Mon Feb 24 2020 04:15:36 GMT+0000 (Coordinated Universal Time)</b><img width="10" src="../images/spacer.gif" height="1"></td>
+<td width="50%" class="whtext"><img width="16" src="../images/spacer.gif" height="1"></td><td width="50%" align="right" class="whtext"><script language="javascript">document.write("<B>" + Date() + "</B>")</script><b>Thu Jan 30 2020 13:40:10 GMT+0000 (Coordinated Universal Time)</b><img width="10" src="../images/spacer.gif" height="1"></td>
 </tr>
 </tbody>
 </table>
@@ -111,10 +111,10 @@
 <table border="0" width="140" cellpadding="0" cellspacing="0">
 <tbody>
 <tr>
-<td height="15" width="130" align="right"><a href="/npg/servlet/Content?data=xml/08_intro.xml&amp;style=xml/08_intro.xsl" class="localnav"><b>introduction</b></a></td><td width="10"><img width="10" src="../images/spacer.gif" height="1"></td>
+<td height="15" width="130" align="right"><a href="/npg/servlet/Content?data=xml/08_home.xml&amp;style=xml/08_home.xsl" class="localnav"><b>introduction</b></a></td><td width="10"><img width="10" src="../images/spacer.gif" height="1"></td>
 </tr>
 <tr>
-<td bgcolor="#cc3300" height="15" width="130" align="right"><a href="/npg/servlet/Content?data=xml/08_home.xml&amp;style=xml/08_home.xsl" class="white"><b>individuals
+<td bgcolor="#cc3300" height="15" width="130" align="right"><a href="/npg/servlet/Content?data=xml/08_home.xml&amp;style=xml/08_home.xsl" class="white"><b>subscriptions
 	       </b></a></td><td bgcolor="#cc3300" width="10"><img width="10" src="/npg/images/spacer.gif" height="1"></td>
 </tr>
 <tr>
@@ -140,6 +140,9 @@
 </tr>
 <tr>
 <td height="15" bgcolor="#ffcccc" width="130" align="right"><a href="/npg/servlet/Content?data=xml/08_privacy.xml&amp;style=xml/08_privacy.xsl" class="red">privacy</a></td><td bgcolor="#ffcccc" width="10"><img width="10" src="/npg/images/spacer.gif" height="1"></td>
+</tr>
+<tr>
+<td height="15" bgcolor="#ffcccc" width="130" align="right"><a href="/npg/servlet/Content?data=xml/08_subscribe_usa.xml&amp;style=xml/08_subscribe.xsl" class="localnav">pricing</a></td><td bgcolor="#ffcccc" width="10"><img width="10" src="/npg/images/spacer.gif" height="1"></td>
 </tr>
 <tr>
 <td height="15" width="130" align="right"><a href="/npg/servlet/Content?data=xml/07_home.xml&amp;style=xml/07_home.xsl" class="localnav"><b>librarian gateway</b></a></td><td width="10"><img width="10" src="../images/spacer.gif" height="1"></td>
@@ -384,45 +387,6 @@ Banner advertisements on the search results page may be matched to suit the resu
 
 
 <p class="text">
-<font size="2"><b>Permissions</b></font>
-</p>
-
-
-<p class="text">
-<b>Reproduction of figures and tables from primary journals</b>
-</p>
-
-<p>For permission to use <i>Nature</i> figures and tables only, please complete our <a href="http://www.nature.com/help/reprints_and_permissions/permit_form.html">permissions request form</a>. All other enquiries should be directed to <a class="text" href="mailto:permissions@nature.com">permissions@nature.com</a>
-
-</p>
-
-
-
-<p class="text">
-<b>Reproduction of figures and tables from CD ROMs, books and secondary journals</b>
-</p>
-
-<p>The same conditions apply for primary journals (see above), and you should use the same permissions form. But please note that permission for electronic reproduction is not unlimited: we may in future require you to link through to the figure on <a href="http://www.nature.com">http://www.nature.com</a>, rather than maintain an electronic version on your own website.</p>
-
-
-
-<p class="text">
-<b>Photocopying of articles for classroom and coursework use</b>
-</p>
-
-<p>Please deal directly with your national copyright licensing agency/copyright clearance centre.</p>
-
-
-
-<p class="text">
-<b>Other enquiries </b>
-</p>
-
-<p>For all other enquiries, including those concerning the reproduction in whatever medium of full papers or illustrative photographs, please e-mail your request to <a class="text" href="mailto:permissions@nature.com">permissions@nature.com</a>. Upon request, <i>Nature</i> may at its discretion provide publishers with electronic versions of items in formats suitable for print and electronic use. In such cases a handling fee will be charged. </p>
-
-
-
-<p class="text">
 <font size="2"><b>Linking to and from Nature Publishing Group website</b></font>
 </p>
 
@@ -453,7 +417,7 @@ Banner advertisements on the search results page may be matched to suit the resu
             <a href="/npg/forms/04_cat.jsp" class="inpagenav">publications&amp;services</a>&nbsp;
             <a href="/npg/servlet/Content?data=xml/11_socpub-intro.xml&amp;style=xml/11_socpub.xsl" class="inpagenav">society publishing</a>&nbsp;
             <a href="/npg/servlet/Content?data=xml/03_welcome.xml&amp;style=xml/03_jobs.xsl" class="inpagenav">work@npg</a>&nbsp;            
-            <a href="/npg/servlet/Content?data=xml/08_intro.xml&amp;style=xml/08_intro.xsl" class="inpagenav">subscriptions&amp;access</a>&nbsp;
+            <a href="/npg/servlet/Content?data=xml/08_home.xml&amp;style=xml/08_home.xsl" class="inpagenav">subscriptions&amp;access</a>&nbsp;
             </td>
 </tr>
 <tr>
@@ -463,7 +427,7 @@ Banner advertisements on the search results page may be matched to suit the resu
             us</a></td>
 </tr>
 <tr>
-<td height="20" colspan="6" align="middle" class="text"><b>© 2004 Nature
+<td height="20" colspan="6" align="middle" class="text"><b>© 2006 Nature
             Publishing Group
 </b></td>
 </tr>
