--- a/p/pi/pis/pisd.edu.html
+++ b/p/pi/pis/pisd.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pisd.edu privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210165511id_/http%3A//www.pisd.edu/common/privacy.statement/index.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pisd.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615010813id_/http%3A//pisd.edu/common/privacy.statement/index.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/Common (no menu) Template.dwt.shtml" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
