--- a/c/ch/cho/chordata.info.html
+++ b/c/ch/cho/chordata.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chordata.info privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231162915id_/http%3A//www.geckotribe.com/info/policy.php3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chordata.info privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011129id_/http%3A//www.geckotribe.com/info/policy.php3) for the most accurate reproduction.-->
 
 <html><head><title>Gecko Tribe, LLC Privacy &amp; Content Policies</title><link rel="stylesheet" type="text/css" href="/stylesheets/default.css"><script language="javascript"><!--
 function showpopup(filename) {
@@ -24,7 +24,7 @@ else { visible=''; hidden=''; }
 
 
 
-<body><div style="position:absolute;top:17px;"><div style="padding:8px;"><table border="0" cellpadding="3" cellspacing="0" width="600">
+<body><div style="position:absolute;top:19px;"><div style="padding:8px;"><table border="0" cellpadding="3" cellspacing="0" width="600">
 <tbody><tr><td align="center">
 	<a href="http://www.geckotribe.com/gift_registry/"><img src="http://www.geckotribe.com/img/registry_banner_1.gif" width="468" height="60" alt="Get Free Stuff! But NOT another necktie!"></a>
 </td></tr><tr><td>
@@ -92,10 +92,10 @@ else { visible=''; hidden=''; }
 	<a href="http://www.geckotribe.com/">Gecko Tribe</a>
 	<ul>
 	<li><a href="http://www.geckotribe.com/press/">Press Room</a></li>
-	<li><a href="http://www.geckotribe.com/info/contact.php">Contact</a></li>
+	<li><a href="https://secure.geckotribe.com/helpdesk/">Contact/Support</a></li>
 	<li><a href="http://www.geckotribe.com/">Home</a></li>
 	<li><a href="http://www.geckotribe.com/info/sitemap.php3">Site map</a></li>
-	<li><a href="http://www.geckotribe.com/info/policy.php3">Privacy &amp; Content policies</a></li>
+	<li><a href="http://www.geckotribe.com/info/policy.php3">Privacy &amp; content policies</a></li>
 	</ul>
 </div>
 <div id="nav2">
@@ -103,10 +103,11 @@ else { visible=''; hidden=''; }
 	<ul>
 	<li><a href="http://www.geckotribe.com/rss/carp/"><b>CaRP</b>: Convert feeds to HTML</a></li>
 	<li><a href="http://www.geckotribe.com/rss/jawfish/"><b>Jawfish</b>: Convert feeds to JavaScript</a></li>
-	<li><a href="http://www.geckotribe.com/rss/grouper/"><b>Grouper</b>: Generate Feeds</a></li>
+	<li><a href="http://www.geckotribe.com/rss/grouper/"><b>Grouper</b>: Create Feeds</a></li>
 	<li><a href="http://www.geckotribe.com/rss/moray/"><b>Moray</b>: Filter &amp; Remix Feeds</a></li>
 	<li><a href="http://chordata.info/"><b>Chordata</b>: Feed Directory</a></li>
-	<li><a href="http://www.geckotribe.com/ibl/b/">Info Bite (weblog)</a></li>
+	<li><a href="http://antone.geckotribe.com/alpha-gecko/categories/technology/xml/">Alpha Gecko : XML (weblog)</a></li>
+	<li><a href="http://www.geckotribe.com/info-bite/ja/">Info Bite (weblog - Japanese)</a></li>
 	</ul>
 </div>
 <div id="nav3">
@@ -126,9 +127,9 @@ else { visible=''; hidden=''; }
 <div id="nav4">
 	<a href="http://www.geckotribe.com/rss/">Web Design</a>
 	<ul>
-	<li><a href="http://design.geckotribe.com/extreme/">Extreme Website Makeover</a></li>
+	<li><a href="http://antone.geckotribe.com/alpha-gecko/categories/technology/web-design/">Alpha Gecko : Web Design</a></li>
 	<li><a href="http://WhiteHatCrew.com/seo/">SEO: search engine optimization</a></li>
-	<li><a href="http://www.geckotribe.com/webdesign/">Design services</a></li>
+	<!--li><a href="http://www.geckotribe.com/webdesign/">Design services</a></li-->
 	<li><a href="http://design.geckotribe.com/monastery/">CSS Trappist Monastery</a></li>
 	<li><a href="http://design.geckotribe.com/colorwheel/">Color wheel</a></li>
 	</ul>
@@ -139,8 +140,6 @@ else { visible=''; hidden=''; }
 	<li><a href="https://secure.geckotribe.com/my_cart/"><b>Shopping cart</b></a></li>
 	<li><a href="https://secure.geckotribe.com/associates/">Affiliate program</a></li>
 	<li><a href="http://gear.geckotribe.com/">T-shirts</a></li>
-	<li><a href="http://www.geckotribe.com/gift_registry/">Gift registry</a></li>
-	<li><a href="http://www.geckotribe.com/bookstore/">The bookstore</a></li>
 	</ul>
 </div>
 <div id="nav6">
@@ -152,7 +151,6 @@ else { visible=''; hidden=''; }
 	<li><a href="http://doodle.geckotribe.com/">Addon stories/poems</a></li>
 	<li><a href="http://doodle.geckotribe.com/interview.php3">Man on the street</a></li>
 	<li><a href="http://doodle.geckotribe.com/news/">News you can't use</a></li>
-	<li><a href="http://groups.geckotribe.com/">Groups</a></li>
 	</ul>
 </div>
 </div>
