--- a/k/ki/kid/kidscamps.com.html
+++ b/k/ki/kid/kidscamps.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the kidscamps.com privacy policy that was archived on 2005-03-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050306021954id_/http%3A//www.kidscamps.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kidscamps.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011246id_/http%3A//kidscamps.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Kidscamps.com - Help</title>
@@ -23,20 +23,92 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
+<script language="javascript" type="text/javascript" src="js/openwin.js"></script>
+<script>
+     isNS4 = (document.layers) ? true : false;
+     isIE4 = (document.all && !document.getElementById) ? true : false;
+     isIE5 = (document.all && document.getElementById) ? true : false;
+     isNS6 = (!document.all && document.getElementById) ? true : false;
+
+function switchDiv(strDivName,boolVisible){
+
+if (document.getElementById(strDivName)) {
+ //identify the element based on browser type
+ if (isNS4) {
+   objElement = document.layers[0];
+ } else if (isIE4) {
+   objElement = document.all[strDivName].style;
+ } else {
+     objElement = document.getElementById(strDivName).style;
+ }
+
+ if(isNS4){
+     if(!boolVisible) {
+       objElement.visibility ="hidden"
+     } else {
+       objElement.visibility ="visible"
+     }
+ }else if(isIE4){
+     if(!boolVisible) {
+       objElement.visibility = "hidden";
+     } else {
+       objElement.visibility = "visible";
+     }
+ } else if (isIE5 || isNS6) {
+      if(!boolVisible){
+          //objElement.visibility = "hidden";
+		  	objElement.display="none";
+      } else {
+         objElement.display = "block";
+        }
+      }
+}
+}
+</script>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-168439-1";
+urchinTracker();
+</script>
+
 </head>
 
-<body id="sectiontwo">
+<body id="sectiontwo" onload="switchDiv('location2',false);switchDiv('location3',false);switchDiv('location4',false);switchDiv('location5',false);switchDiv('desc2',false);switchDiv('desc3',false);;switchDiv('desc4',false);switchDiv('desc5',false);switchDiv('container',false);switchDiv('addcamp-link',true)">
 
 <div id="wrapper">
-
+	
+	<div id="topbannerad" style="width:100%; height:90px; background:#fc3; line-height:90px; text-align:center; padding:8px 0;">
+		<!-- ValueClick Media 468x60 and 728x90 Banner CODE for kidscamps.com -->
+<script language="javascript" src="http://media.fastclick.net/w/get.media?sid=26380&amp;m=1&amp;tp=5&amp;d=j&amp;t=s"></script>
+<noscript><a 
+href="http://media.fastclick.net/w/click.here?sid=26380&m=1&c=1" 
+target="_top">
+<img 
+src="http://media.fastclick.net/w/get.media?sid=26380&m=1&tp=5&d=s&c=1"
+width=728 height=90 border=1></a></noscript>
+<!-- ValueClick Media 468x60 and 728x90 Banner CODE for kidscamps.com -->
+	</div>
+	
 	<div id="mainbanner">
 	
 		<div id="logo"><a href="/"><img src="i/kc_logo2.gif" alt="" border="0"></a></div>
+		<div id="iecoverup"></div>
 		
-		<div id="ad"><a href="http://www.campersmall.com/"><img src="http://kidscamps.com/banners/cm_banner_392x60.gif" alt="" border="0"></a></div>
+		<div id="ad"><a href="http://www.campersmall.com"><img src="http://kidscamps.com/banners/cm_banner_392x60.gif" alt="" border="0"></a></div>
+
 
 		<div id="tagline">
-			<div id="globalnav"><a href="/" id="home">Home</a> <a href="contact.shtml">Contact Us</a> <a href="help.shtml">Help</a></div> 
+			<div id="globalnav"><!--<a href="/" id="home">Home</a> <a href="contact.shtml">Contact Us</a> <a href="help.shtml">Help</a>-->
+
+<ul>
+	<li id="home"><a href="/" title="Home"><img src="http://www.kidscamps.com/i/ico_home.gif" alt="Home."><span>Home</span></a></li>
+	<li><a href="http://www.kidscamps.com/contact.shtml" title="Contact Us"><img src="http://www.kidscamps.com/i/ico_contact.gif" alt="Contact Us."><span>Contact Us</span></a></li>
+	<li><a href="http://www.kidscamps.com/help.shtml" title="Help"><img src="http://www.kidscamps.com/i/ico_help.gif" alt="Ayuda."><span>Help</span></a></li>
+	<li id="es"><a href="http://www.kidscampsespanol.com" title="Español"><img src="http://www.kidscamps.com/i/ico_spanish.gif" alt="Español."><span>Español</span></a></li>
+</ul>  
+</div> 
 		</div>
 			
 	</div>
@@ -48,8 +120,8 @@
         <h2>Privacy Statement</h2>
 			  <br>
 		  <h3 align="left">Privacy Statement for KidsCamps.com®</h3>
-			  <p align="left">          KidsCamps.com® is firmly commited to privacy. The following discloses our information gathering and dissemination
-            practices for this website: <a href="http://www.kidscamps.com">KidsCamps.com</a>®.</p>
+			  <p align="left">          KidsCamps.com® is firmly committed to privacy. The following discloses
+			    our information gathering and dissemination practices for this website: <a href="http://www.kidscamps.com">KidsCamps.com</a>®.</p>
 			  <p align="left">This site contains third party links. <a href="http://www.kidscamps.com">KidsCamps.com</a>® is not
 			    responsible for the privacy practices or the content of such Web Sites.</p>
 			  <p align="left">Our online survey asks visitors for contact information (such as their email address) and demographic
@@ -78,8 +150,8 @@
 	        <li> You can visit the following URL: <a href="http://www.kidscamps.com">http://www.kidscamps.com</a>® and
         use the Contact Us form.</li>
 		      <li> You can send mail to the following postal address:<br>
-          6421 Congress Ave., Suite 200, Boca Raton, Florida 33487</li>
-          <li> You can call the following telephone number: 877-242-9330</li>
+          2500 N. Military Trail, Suite 450, Boca Raton, Florida 33431-6353</li>
+              <li> You can call the following telephone number: 877-242-9330</li>
 		  </ol>
 			  <h3 align="left">Correct/Update</h3>
 			  <p align="left">This site gives users the following options for changing and modifying information previously provided.</p>
@@ -88,7 +160,7 @@
 	        <li> Visit <a href="http://www.kidscamps.com">http://www.kidscamps.com</a>® and fill
             out the online update form.</li>
 		      <li> Send mail to the following postal address:<br>
-	          6421 Congress Ave., Suite 200, Boca Raton, Florida 33487</li>
+	          2500 N. Military Trail, Suite 450, Boca Raton, Florida 33431-6353</li>
 		      <li> Call the following telephone number: 877-242-9330</li>
 		  </ol>
 			  <h3 align="left">Contacting the Web Site</h3>
@@ -96,7 +168,7 @@
 			    with this Web site, you can contact:<br>
           <i>Webmaster<br>
           <a href="http://www.kidscamps.com">KidsCamps.com</a>®<br>
-6421 Congress Ave., Suite 200, Boca Raton, Florida 33487<br>
+2500 N. Military Trail, Suite 450, Boca Raton, Florida 33431-6353<br>
 Boca Raton, FL 33487<br>
 <a href="mailto:info@kidscamps.com">info@kidscamps.com</a></i> </p>
 			  	<div id="footer">
@@ -107,6 +179,28 @@ Boca Raton, FL 33487<br>
 			<li><a href="press.shtml">Press</a> |</li>
 			<li><a href="help.shtml">Help</a></li>
 		</ul>
+	</div>
+	
+	<div id="bottom_menu">
+		<ul class="navi first">
+			<li><a href="disclaimer.shtml">Disclaimer</a> |</li>
+			<li><a href="privacy.shtml">Privacy Statement</a></li>
+    </ul>
+		<ul class="navi nomargin">
+  <li>Copyright © 2006, <a href="http://www.nichedirectories.com">NicheDirectories</a>™, LLC. All rights reserved.</li>
+</ul>
+<ul class="navi">
+  <li>Publisher of</li>
+  <li><a href="http://www.kidscamps.com">KidsCamps.com</a>,</li>
+  <li><a href="http://www.campjobs.com">CampJobs.com</a>,</li>
+  <li><a href="http://www.campersmall.com">CampersMall.com</a>,</li>
+  <li><a href="http://www.campdirectorsmall.com">CampDirectorsMall.com</a>,</li>
+  <li><a href="http://www.screenstaff.com">ScreenStaff.com</a>,</li>
+  <li><a href="http://www.campmessenger.com">CampMessenger.com</a>,</li>
+  <li><a href="http://www.insuretuition.com">InsureTuition.com</a>,</li>
+  <li><a href="http://www.grownupcamps.com">GrownUpCamps.com</a>,</li>
+	<li><a href="http://www.rentmycamp.com">RentMyCamp.com</a></li>
+</ul>
 	</div>
 			
 		</div>
