--- a/t/tr/tri/tripleyourlist.com.html
+++ b/t/tr/tri/tripleyourlist.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tripleyourlist.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228172242id_/http%3A//www.tripleyourlist.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tripleyourlist.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615011414id_/http%3A//www.tripleyourlist.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Triple Your List :: Privacy Policy</title>
@@ -131,7 +131,7 @@ Internet Marketing Aces, LLC is controlled, operated and administered entirely w
 <img src="http://www.tripleyourlist.com/images/invisible.gif" alt="" width="10" height="10" border="0">
 </td>
 <td width="440" valign="TOP">
-<div class="blacka12b">Triple Your List © 2003-2004.</div>
+<div class="blacka12b">Triple Your List © 2003-2006</div>
 <div class="blacka12">A division of Internet Marketing Aces, LLC. </div>
 <div class="blacka10b"><br>
 Internet Marketing Aces, LLC<br>
