--- a/p/pu/put/putfile.com.html
+++ b/p/pu/put/putfile.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the putfile.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231060801id_/http%3A//www.putfile.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the putfile.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615012419id_/http%3A//www.putfile.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Putfile - Privacy Policy</title>
@@ -94,23 +94,18 @@ alert("The code to place the image on a forum or a blog copied to your clipboard
       <tr> 
         <td colspan="2"> 
           <div align="center">
-  <p><font size="1" face="Arial, Helvetica, sans-serif"><strong>+ <a href="http://www.putfile.com">Putfile 
-    3.0</a> - <a href="http://upload.video.putfile.com/">Upload Video</a> - <a href="http://forums.putfile.com/viewforum.php?f=14">Tutorials</a> 
-    - <a href="http://www.putfile.com/dmca.php">DMCA Policy</a> - <a href="http://www.putfile.com/privacy.php">Privacy 
-    Policy</a> - <a href="http://www.putfile.com/tos.php">Terms Of Service</a> 
-    - <a href="http://www.putfile.com/advertising.php">Advertise</a> - <a href="http://www.putfile.com/donate.php">Donate</a> - <a href="http://www.putfile.com/press.php">Press</a> - ©2005 <a href="http://www.putfileltd.com">Putfile 
-    Ltd.</a> +</strong></font></p>
-  </div>
-<!-- Start of StatCounter Code -->
-<script type="text/javascript" language="javascript">
-var sc_project=996522; 
-var sc_invisible=1; 
-var sc_partition=9; 
-var sc_security="019184e3"; 
+  <font size="1" face="Arial, Helvetica, sans-serif"><strong>++ <a href="http://www.putfile.com">Putfile 
+    3.0</a> - <a href="http://upload.video.putfile.com/">Upload Video</a> - <a href="http://forums.putfile.com/viewforum.php?f=14">Tutorials</a> - <a href="http://news.putfile.com">Funny News</a>
+    - <a href="http://www.putfile.com/dmca.php">DMCA</a> - <a href="http://www.putfile.com/privacy.php">Privacy</a> - <a href="http://www.putfile.com/tos.php">Terms Of Service</a> 
+    - <a href="http://www.putfile.com/advertising.php">Advertise</a> - <a href="http://www.putfile.com/donate.php">Donate</a> - <a href="http://www.putfile.com/press.php">Press</a> - ©2006 <a href="http://www.putfileltd.com">Putfile 
+    Ltd.</a> ++</strong></font>
+  </div><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
-<script type="text/javascript" language="javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><a href="http://www.statcounter.com/" target="_blank"><img  src="http://c10.statcounter.com/counter.php?sc_project=996522&amp;java=0&amp;security=019184e3&amp;invisible=1" alt="cool hit counter" border="0"></a> </noscript>
-<!-- End of StatCounter Code -->
-        </td>
+<script type="text/javascript">
+_uacct = "UA-172974-4";
+_udn="putfile.com"; 
+urchinTracker();
+</script>        </td>
       </tr>
     </tbody></table>
   </div>
